--- a/main5.css
+++ b/main5.css
@@ -24,6 +24,9 @@ body{
     background-color: black;
     color: white;
 }
+.header-employee h2{
+    padding-left: 20px;
+}
 .container{
     background-color: #F8F9FA;
 }
